--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,21 @@
             <artifactId>tiles-jsp</artifactId>
             <version>3.0.7</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>6.0.6</version>
+        </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>2.0.6</version>
+        </dependency>
     </dependencies>
     <properties>
         <java.version>1.8</java.version>
